Migrate GpuExpressionCompiler to Expression IR
GpuExpressionCompiler now compiles Expression IR directly: entry
points take an Expression plus a Map<Symbol, Integer> layout, and
the visitor dispatches on the IR's first-class nodes (Comparison,
Cast, Logical, IsNull, Between, In, Coalesce, Case) instead of the
old SpecialForm/Call shape. NOT_EQUAL is lowered locally to
NOT(EQUAL); previously SqlToRowExpressionTranslator did that
lowering before the compiler saw it.

LocalExecutionPlanner's GPU path in visitScanFilterAndProject hands
the Expression and source layout straight to the compiler. The CPU
fall-back still goes through RowExpression; the remaining
toRowExpression(...) call sites are out of scope here.

(cherry picked from commit 3f1ea5e3329453c4d9af7b1d4e9f4c0be65dbd6b)